# ckmailer

./: README.md  bmailer.cc  ckmailer.cc  ckmserv.cc  imap.cc  meson.build  nonblocker.cc  nonblocker.hh  support.cc  support.hh  testrunner.cc
.github/workflows/: meson.yml
html/: logic.js
partials/: base.html  channel.html  channel.nl.html  custom.css  feed.xml  manage.html  manage.nl.html  signinon.html  signinon.nl.html  unsubscribe.html  unsubscribe.nl.html
